[UPDATE] draws added

--- a/dibujos-css/index.html
+++ b/dibujos-css/index.html
@@ -7,32 +7,32 @@
   <title>Document</title>
 </head>
 <body>
-	<div class="container">
-		<div class="shadow"></div>
-		<div class="shield"></div>
-		<div class="leg-r"></div>
-		<div class="leg-l"></div>
-		<div class="arm-left"></div>
-		<div class="body"></div>
-		<div class="dec1"></div>
-		<div class="dec2"></div>
-		<div class="dec3"></div>
-		<div class="dec4"></div>
-		<div class="dec5"></div>
-		<div class="dec6"></div>
-		<div class="dec7"></div>
-		<div class="arm-right"></div>
-		<div class="sword"></div>
-		<div class="sword-handle"></div>
-		<div class="hand-right"></div>
-		<div class="finger-right"></div>
-		<div class="head"></div>
-		<div class="face-mount"></div>
-		<div class="head-l"></div>
-		<div class="head-r"></div>
-		<div class="face"></div>
-		<div class="eye eye-l"></div>
-		<div class="eye eye-r"></div>
+	<div class="img1-container">
+		<div class="img1-shadow"></div>
+		<div class="img1-shield"></div>
+		<div class="img1-leg-r"></div>
+		<div class="img1-leg-l"></div>
+		<div class="img1-arm-left"></div>
+		<div class="img1-body"></div>
+		<div class="img1-dec1"></div>
+		<div class="img1-dec2"></div>
+		<div class="img1-dec3"></div>
+		<div class="img1-dec4"></div>
+		<div class="img1-dec5"></div>
+		<div class="img1-dec6"></div>
+		<div class="img1-dec7"></div>
+		<div class="img1-arm-right"></div>
+		<div class="img1-sword"></div>
+		<div class="img1-sword-handle"></div>
+		<div class="img1-hand-right"></div>
+		<div class="img1-finger-right"></div>
+		<div class="img1-head"></div>
+		<div class="img1-face-mount"></div>
+		<div class="img1-head-l"></div>
+		<div class="img1-head-r"></div>
+		<div class="img1-face"></div>
+		<div class="img1-eye img1-eye-l"></div>
+		<div class="img1-eye img1-eye-r"></div>
 
 	</div>
 </body>
