--- a/dibujos-css/index2.html
+++ b/dibujos-css/index2.html
@@ -7,37 +7,37 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="container">
-    <div class="shadow"></div>
-    <div class="shadow-handle"></div>
-    <div class="sword"></div>
-    <div class="leg-right"></div>
-    <div class="arm-right"></div>
-    <div class="body"></div>
-    <div class="head"></div>
-    <div class="braid2">
-      <div class="ball ball1"></div>
-      <div class="ball ball2"></div>
-      <div class="ball ball3"></div>
-      <div class="ball ball4"></div>
-      <div class="ball ball5"></div>
-      <div class="ball ball6"></div>
+  <div class="img2-container">
+    <div class="img2-shadow"></div>
+    <div class="img2-shadow-handle"></div>
+    <div class="img2-sword"></div>
+    <div class="img2-leg-right"></div>
+    <div class="img2-arm-right"></div>
+    <div class="img2-body"></div>
+    <div class="img2-head"></div>
+    <div class="img2-braid2">
+      <div class="img2-ball ball1"></div>
+      <div class="img2-ball ball2"></div>
+      <div class="img2-ball ball3"></div>
+      <div class="img2-ball ball4"></div>
+      <div class="img2-ball ball5"></div>
+      <div class="img2-ball ball6"></div>
     </div>
-    <div class="face"></div>
-    <div class="braid">
-      <div class="ball ball1"></div>
-      <div class="ball ball2"></div>
-      <div class="ball ball3"></div>
-      <div class="ball ball4"></div>
-      <div class="ball ball5"></div>
-      <div class="ball ball6"></div>
+    <div class="img2-face"></div>
+    <div class="img2-braid">
+      <div class="img2-ball ball1"></div>
+      <div class="img2-ball ball2"></div>
+      <div class="img2-ball ball3"></div>
+      <div class="img2-ball ball4"></div>
+      <div class="img2-ball ball5"></div>
+      <div class="img2-ball ball6"></div>
     </div>
-    <div class="beard"></div>
-    <div class="arm-left"></div>
-    <div class="nose"></div>
-    <div class="mouth"></div>
-    <div class="eye-left"></div>
-    <div class="eye-right"></div>
+    <div class="img2-beard"></div>
+    <div class="img2-arm-left"></div>
+    <div class="img2-nose"></div>
+    <div class="img2-mouth"></div>
+    <div class="img2-eye-left"></div>
+    <div class="img2-eye-right"></div>
   </div>
 </body>
 </html>
